--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "homework2",
+  "homepage": "https://github.com/KatyKartasava/home-work-2.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
