--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "HW-2-sprint",
-  "homepage": "https://katykartasava.github.io/HW-2-sprint",
+  "homepage": "https://Katerina.github.io/HW-2-sprint",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
